@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,53 +16,101 @@
 
 package com.navercorp.pinpoint.collector.receiver.grpc;
 
+import com.google.protobuf.GeneratedMessageV3;
+import com.navercorp.pinpoint.collector.receiver.BindAddress;
 import com.navercorp.pinpoint.collector.receiver.DispatchHandler;
+import com.navercorp.pinpoint.collector.receiver.grpc.flow.RateLimitClientStreamServerInterceptor;
+import com.navercorp.pinpoint.collector.receiver.grpc.service.DefaultServerRequestFactory;
+import com.navercorp.pinpoint.collector.receiver.grpc.service.ServerRequestFactory;
 import com.navercorp.pinpoint.collector.receiver.grpc.service.SpanService;
+import com.navercorp.pinpoint.collector.receiver.grpc.service.StreamCloseOnError;
 import com.navercorp.pinpoint.common.server.util.AddressFilter;
+import com.navercorp.pinpoint.grpc.server.AgentHeaderReader;
+import com.navercorp.pinpoint.grpc.server.HeaderPropagationInterceptor;
 import com.navercorp.pinpoint.grpc.server.ServerOption;
 import com.navercorp.pinpoint.grpc.trace.PResult;
+import com.navercorp.pinpoint.grpc.trace.PSpan;
 import com.navercorp.pinpoint.io.request.ServerRequest;
 import com.navercorp.pinpoint.io.request.ServerResponse;
-import io.grpc.Attributes;
-import io.grpc.BindableService;
-import io.grpc.ConnectivityStateInfo;
-import io.grpc.EquivalentAddressGroup;
-import io.grpc.LoadBalancer;
-import io.grpc.PickFirstBalancerFactory;
-import io.grpc.Status;
+import io.github.bucket4j.Bandwidth;
+import io.grpc.ServerInterceptors;
+import io.grpc.ServerServiceDefinition;
 
 import java.net.InetAddress;
-import java.util.Arrays;
+import java.time.Duration;
 import java.util.List;
+import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.LinkedBlockingQueue;
+import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
-
-import static com.google.common.base.Preconditions.checkNotNull;
-import static io.grpc.ConnectivityState.CONNECTING;
+import java.util.logging.ConsoleHandler;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 /**
  * @author jaehong.kim
  */
 public class SpanServerTestMain {
     public static final String IP = "0.0.0.0";
-    public static final int PORT = 9998;
+    public static final int PORT = 9993;
 
     public void run() throws Exception {
+//        InternalLoggerFactory.setDefaultFactory(Log4J2LoggerFactory.INSTANCE);
+
+        Logger logger = Logger.getLogger("io.grpc");
+        logger.setLevel(Level.FINER);
+        logger.addHandler(new ConsoleHandler());
+
         GrpcReceiver grpcReceiver = new GrpcReceiver();
         grpcReceiver.setBeanName("TraceServer");
-        grpcReceiver.setBindIp(IP);
-        grpcReceiver.setBindPort(PORT);
-        BindableService bindableService = new SpanService(new MockDispatchHandler());
-        grpcReceiver.setBindableServiceList(Arrays.asList(bindableService));
+        BindAddress.Builder builder = BindAddress.newBuilder();
+        builder.setIp(IP);
+        builder.setPort(PORT);
+        grpcReceiver.setBindAddress(builder.build());
+
+        Executor executor = newWorkerExecutor(8);
+        ServerServiceDefinition bindableService = newSpanBindableService(executor);
+        grpcReceiver.setBindableServiceList(List.of(bindableService));
         grpcReceiver.setAddressFilter(new MockAddressFilter());
         grpcReceiver.setExecutor(Executors.newFixedThreadPool(8));
         grpcReceiver.setEnable(true);
-        grpcReceiver.setServerOption(new ServerOption.Builder().build());
+        grpcReceiver.setServerOption(ServerOption.newBuilder().build());
 
+        AgentHeaderReader agentHeaderReader = new AgentHeaderReader("test");
+        HeaderPropagationInterceptor interceptor = new HeaderPropagationInterceptor(agentHeaderReader);
+        grpcReceiver.setServerInterceptorList(List.of(interceptor));
+
+//        for(int i = 0; i < 9999; i++) {
         grpcReceiver.afterPropertiesSet();
 
         grpcReceiver.blockUntilShutdown();
-        grpcReceiver.destroy();
+//            TimeUnit.SECONDS.sleep(30);
+//            System.out.println("###### SHUTDOWN");
+//            grpcReceiver.destroy();
+//            grpcReceiver.blockUntilShutdown();
+//            System.out.println("###### START");
+//            TimeUnit.SECONDS.sleep(30);
+
+    }
+
+    private ServerServiceDefinition newSpanBindableService(Executor executor) {
+
+        Bandwidth bandwidth = Bandwidth.builder().capacity(1000).refillGreedy(200, Duration.ofSeconds(1)).build();
+        RateLimitClientStreamServerInterceptor rateLimit = new RateLimitClientStreamServerInterceptor("test-span", executor, bandwidth, 1);
+
+        MockDispatchHandler dispatchHandler = new MockDispatchHandler();
+        ServerRequestFactory serverRequestFactory = new DefaultServerRequestFactory();
+        SpanService spanService = new SpanService(dispatchHandler, serverRequestFactory, StreamCloseOnError.FALSE);
+        return ServerInterceptors.intercept(spanService, rateLimit);
+    }
+
+    private ExecutorService newWorkerExecutor(int thread) {
+        return new ThreadPoolExecutor(thread, thread,
+                0L, TimeUnit.MILLISECONDS,
+                new LinkedBlockingQueue<>(thread * 2));
     }
 
     public static void main(String[] args) throws Exception {
@@ -70,17 +118,28 @@ public class SpanServerTestMain {
         main.run();
     }
 
-    private static class MockDispatchHandler implements DispatchHandler {
-        private static AtomicInteger counter = new AtomicInteger(0);
+    private static class MockDispatchHandler implements DispatchHandler<GeneratedMessageV3, GeneratedMessageV3> {
+        private static final AtomicInteger counter = new AtomicInteger(0);
 
         @Override
-        public void dispatchSendMessage(ServerRequest serverRequest) {
-            System.out.println("Dispatch send message " + serverRequest);
+        public void dispatchSendMessage(ServerRequest<GeneratedMessageV3> serverRequest) {
+//            System.out.println("## Incoming " + IncomingCounter.addAndGet(1));
+            try {
+                TimeUnit.SECONDS.sleep(1);
+            } catch (InterruptedException ignored) {
+            }
+
+            final GeneratedMessageV3 data = serverRequest.getData();
+            if (data instanceof PSpan span) {
+                System.out.println("Dispatch send message " + span.getSpanId());
+            } else {
+                System.out.println("Invalid send message " + serverRequest.getData());
+            }
         }
 
         @Override
-        public void dispatchRequestMessage(ServerRequest serverRequest, ServerResponse serverResponse) {
-            System.out.println("Dispatch request message " + serverRequest + ", " + serverResponse);
+        public void dispatchRequestMessage(ServerRequest<GeneratedMessageV3> serverRequest, ServerResponse<GeneratedMessageV3> serverResponse) {
+//            System.out.println("Dispatch request message " + serverRequest + ", " + serverResponse);
             serverResponse.write(PResult.newBuilder().setMessage("Success" + counter.getAndIncrement()).build());
         }
     }
