@@ -22,13 +22,11 @@ import com.navercorp.pinpoint.common.server.bo.serializer.stat.AgentStatDecoding
 import com.navercorp.pinpoint.common.server.bo.serializer.stat.AgentStatUtils;
 import com.navercorp.pinpoint.common.server.bo.stat.AgentStatDataPoint;
 import com.navercorp.pinpoint.common.server.bo.stat.AgentStatType;
-import org.apache.commons.lang3.RandomUtils;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -44,14 +42,14 @@ public class AgentStatEncoderTest {
 
     private AgentStatCodec<TestAgentStat> codec = new TestAgentStatCodec();
 
-    private AgentStatEncoder<TestAgentStat> encoder = new AgentStatEncoder<TestAgentStat>(codec);
+    private AgentStatEncoder<TestAgentStat> encoder = new AgentStatEncoder<>(codec);
 
-    private AgentStatDecoder<TestAgentStat> decoder = new AgentStatDecoder<TestAgentStat>(Arrays.asList(codec));
+    private AgentStatDecoder<TestAgentStat> decoder = new AgentStatDecoder<>(List.of(codec));
 
     @Test
     public void stats_should_be_encoded_and_decoded_into_same_value() {
         long initialTimestamp = System.currentTimeMillis();
-        int numStats = RandomUtils.nextInt(1, 21);
+        int numStats = RANDOM.nextInt(1, 21);
         List<TestAgentStat> expectedAgentStats = this.createTestAgentStats(initialTimestamp, numStats);
         long baseTimestamp = AgentStatUtils.getBaseTimestamp(initialTimestamp);
         long timestampDelta = initialTimestamp - baseTimestamp;
@@ -69,7 +67,7 @@ public class AgentStatEncoderTest {
     }
 
     private List<TestAgentStat> createTestAgentStats(long initialTimestamp, int numStats) {
-        List<TestAgentStat> agentStats = new ArrayList<TestAgentStat>(numStats);
+        List<TestAgentStat> agentStats = new ArrayList<>(numStats);
         for (int i = 0; i < numStats; i++) {
             long timestamp = initialTimestamp + (COLLECT_INTERVAL * i);
             TestAgentStat agentStat = new TestAgentStat();
@@ -83,7 +81,7 @@ public class AgentStatEncoderTest {
     }
 
     protected void verify(List<TestAgentStat> expectedAgentStats, List<TestAgentStat> actualAgentStats) {
-        Assert.assertEquals(expectedAgentStats, actualAgentStats);
+        Assertions.assertEquals(expectedAgentStats, actualAgentStats);
     }
 
     private List<TestAgentStat> decode(Buffer encodedQualifierBuffer, Buffer encodedValueBuffer, AgentStatDecodingContext decodingContext) {
@@ -112,7 +110,7 @@ public class AgentStatEncoderTest {
         @Override
         public List<TestAgentStat> decodeValues(Buffer valueBuffer, AgentStatDecodingContext decodingContext) {
             int size = valueBuffer.readInt();
-            List<TestAgentStat> agentStats = new ArrayList<TestAgentStat>(size);
+            List<TestAgentStat> agentStats = new ArrayList<>(size);
             for (int i = 0; i < size; i++) {
                 TestAgentStat agentStat = new TestAgentStat();
                 agentStat.setAgentId(decodingContext.getAgentId());
@@ -127,6 +125,7 @@ public class AgentStatEncoderTest {
 
     private static class TestAgentStat implements AgentStatDataPoint {
 
+        private String applicationName;
         private String agentId;
         private long startTimestamp;
         private long timestamp;
@@ -173,6 +172,16 @@ public class AgentStatEncoderTest {
         @Override
         public AgentStatType getAgentStatType() {
             return AgentStatType.UNKNOWN;
+        }
+
+        @Override
+        public String getApplicationName() {
+            return this.applicationName;
+        }
+
+        @Override
+        public void setApplicationName(String applicationName) {
+            this.applicationName = applicationName;
         }
 
         @Override
