@@ -1,24 +1,36 @@
 package com.navercorp.pinpoint.web.filter;
 
 import com.navercorp.pinpoint.common.server.bo.AnnotationBo;
+import com.navercorp.pinpoint.common.server.bo.SpanBo;
 import com.navercorp.pinpoint.common.server.bo.SpanEventBo;
-import com.navercorp.pinpoint.loader.service.AnnotationKeyRegistryService;
-import com.navercorp.pinpoint.loader.service.ServiceTypeRegistryService;
 import com.navercorp.pinpoint.common.trace.AnnotationKey;
 import com.navercorp.pinpoint.common.trace.AnnotationKeyFactory;
 import com.navercorp.pinpoint.common.trace.ServiceType;
-import com.navercorp.pinpoint.common.server.bo.SpanBo;
+import com.navercorp.pinpoint.loader.service.AnnotationKeyRegistryService;
+import com.navercorp.pinpoint.loader.service.ServiceTypeRegistryService;
 import com.navercorp.pinpoint.web.TestTraceUtils;
-import org.junit.Assert;
-import org.junit.Test;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
+import java.util.Base64;
 import java.util.Collections;
+import java.util.List;
 
-import static com.navercorp.pinpoint.web.TestTraceUtils.*;
+import static com.navercorp.pinpoint.web.TestTraceUtils.BACKEND_TYPE_CODE;
+import static com.navercorp.pinpoint.web.TestTraceUtils.BACKEND_TYPE_NAME;
+import static com.navercorp.pinpoint.web.TestTraceUtils.MESSAGE_QUEUE_TYPE_CODE;
+import static com.navercorp.pinpoint.web.TestTraceUtils.MESSAGE_QUEUE_TYPE_NAME;
+import static com.navercorp.pinpoint.web.TestTraceUtils.RPC_TYPE_CODE;
+import static com.navercorp.pinpoint.web.TestTraceUtils.TOMCAT_TYPE_NAME;
+import static com.navercorp.pinpoint.web.TestTraceUtils.UNKNOWN_TYPE_NAME;
+import static com.navercorp.pinpoint.web.TestTraceUtils.USER_TYPE_NAME;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 /**
  * @author emeroad
@@ -28,28 +40,18 @@ public class LinkFilterTest {
     private static final int RPC_ANNOTATION_CODE = -1;
     private static final String RPC_ANNOTATION_NAME = "rpc.url";
 
-    private final Logger logger = LoggerFactory.getLogger(this.getClass());
+    private final Logger logger = LogManager.getLogger(this.getClass());
     private final ServiceTypeRegistryService serviceTypeRegistryService = TestTraceUtils.mockServiceTypeRegistryService();
     private final AnnotationKeyRegistryService annotationKeyRegistryService = mockAnnotationKeyRegistryService();
 
     private AnnotationKeyRegistryService mockAnnotationKeyRegistryService() {
         final AnnotationKey rpcUrlAnnotationKey = AnnotationKeyFactory.of(RPC_ANNOTATION_CODE, RPC_ANNOTATION_NAME);
-        return new AnnotationKeyRegistryService() {
-            @Override
-            public AnnotationKey findAnnotationKey(int annotationCode) {
-                return rpcUrlAnnotationKey;
-            }
 
-            @Override
-            public AnnotationKey findAnnotationKeyByName(String keyName) {
-                return rpcUrlAnnotationKey;
-            }
-
-            @Override
-            public AnnotationKey findApiErrorCode(int annotationCode) {
-                return rpcUrlAnnotationKey;
-            }
-        };
+        AnnotationKeyRegistryService mock = mock(AnnotationKeyRegistryService.class);
+        when(mock.findAnnotationKey(anyInt())).thenReturn(rpcUrlAnnotationKey);
+        when(mock.findAnnotationKeyByName(anyString())).thenReturn(rpcUrlAnnotationKey);
+        when(mock.findApiErrorCode(anyInt())).thenReturn(rpcUrlAnnotationKey);
+        return mock;
     }
 
 
@@ -58,14 +60,13 @@ public class LinkFilterTest {
         ServiceType tomcat = serviceTypeRegistryService.findServiceTypeByName(TOMCAT_TYPE_NAME);
         final short tomcatServiceType = tomcat.getCode();
 
-        FilterDescriptor descriptor = new FilterDescriptor();
-        descriptor.setFromApplicationName("APP_A");
-        descriptor.setFromServiceType(tomcat.getName());
-//        descriptor.setFromAgentId("AGENT_A");
+        FilterDescriptor.FromNode fromNode = new FilterDescriptor.FromNode("APP_A", tomcat.getName(), null);
+        FilterDescriptor.ToNode toNode = new FilterDescriptor.ToNode("APP_B", tomcat.getName(), null);
+        FilterDescriptor.SelfNode selfNode = new FilterDescriptor.SelfNode(null, null, null);
+        FilterDescriptor.ResponseTime responseTime = new FilterDescriptor.ResponseTime(null, null);
+        FilterDescriptor.Option option = new FilterDescriptor.Option(null, null);
+        FilterDescriptor descriptor = new FilterDescriptor(fromNode, toNode, selfNode, responseTime, option);
 
-        descriptor.setToApplicationName("APP_B");
-        descriptor.setToServiceType(tomcat.getName());
-//        descriptor.setToAgentId("AGENT_B");
 
         FilterHint hint = new FilterHint(Collections.emptyList());
 
@@ -90,8 +91,8 @@ public class LinkFilterTest {
         spanBoC.setServiceType(tomcatServiceType);
         spanBoC.setAgentId("AGENT_C");
 
-        Assert.assertTrue(linkFilter.include(Arrays.asList(fromSpanBo, toSpanBO)));
-        Assert.assertFalse(linkFilter.include(Arrays.asList(fromSpanBo, spanBoC)));
+        Assertions.assertTrue(linkFilter.include(List.of(fromSpanBo, toSpanBO)));
+        Assertions.assertFalse(linkFilter.include(List.of(fromSpanBo, spanBoC)));
 
     }
 
@@ -100,14 +101,12 @@ public class LinkFilterTest {
         final ServiceType tomcat = serviceTypeRegistryService.findServiceTypeByName(TOMCAT_TYPE_NAME);
         final short tomcatServiceType = tomcat.getCode();
 
-        FilterDescriptor descriptor = new FilterDescriptor();
-        descriptor.setFromApplicationName("APP_A");
-        descriptor.setFromServiceType(tomcat.getName());
-        descriptor.setFromAgentId("AGENT_A");
-
-        descriptor.setToApplicationName("APP_B");
-        descriptor.setToServiceType(tomcat.getName());
-        descriptor.setToAgentId("AGENT_B");
+        FilterDescriptor.FromNode fromNode = new FilterDescriptor.FromNode("APP_A", tomcat.getName(), "AGENT_A");
+        FilterDescriptor.ToNode toNode = new FilterDescriptor.ToNode("APP_B", tomcat.getName(), "AGENT_B");
+        FilterDescriptor.SelfNode selfNode = new FilterDescriptor.SelfNode(null, null, null);
+        FilterDescriptor.ResponseTime responseTime = new FilterDescriptor.ResponseTime(null, null);
+        FilterDescriptor.Option option = new FilterDescriptor.Option(null, null);
+        FilterDescriptor descriptor = new FilterDescriptor(fromNode, toNode, selfNode, responseTime, option);
 
         FilterHint hint = new FilterHint(Collections.emptyList());
 
@@ -132,8 +131,8 @@ public class LinkFilterTest {
         spanBoC.setServiceType(tomcatServiceType);
         spanBoC.setAgentId("AGENT_C");
 
-        Assert.assertTrue(linkFilter.include(Arrays.asList(fromSpanBo, toSpanBO)));
-        Assert.assertFalse(linkFilter.include(Arrays.asList(fromSpanBo, spanBoC)));
+        Assertions.assertTrue(linkFilter.include(List.of(fromSpanBo, toSpanBO)));
+        Assertions.assertFalse(linkFilter.include(List.of(fromSpanBo, spanBoC)));
     }
 
     @Test
@@ -141,11 +140,12 @@ public class LinkFilterTest {
         final ServiceType user = serviceTypeRegistryService.findServiceTypeByName(USER_TYPE_NAME);
         final ServiceType tomcat = serviceTypeRegistryService.findServiceTypeByName(TOMCAT_TYPE_NAME);
 
-        FilterDescriptor descriptor = new FilterDescriptor();
-        descriptor.setFromApplicationName("USER");
-        descriptor.setFromServiceType(user.getName());
-        descriptor.setToApplicationName("APP_A");
-        descriptor.setToServiceType(tomcat.getName());
+        FilterDescriptor.FromNode fromNode = new FilterDescriptor.FromNode("USER", user.getName(), null);
+        FilterDescriptor.ToNode toNode = new FilterDescriptor.ToNode("APP_A", tomcat.getName(), null);
+        FilterDescriptor.SelfNode selfNode = new FilterDescriptor.SelfNode(null, null, null);
+        FilterDescriptor.Option option = new FilterDescriptor.Option(null, null);
+        FilterDescriptor.ResponseTime responseTime = new FilterDescriptor.ResponseTime(null, null);
+        FilterDescriptor descriptor = new FilterDescriptor(fromNode, toNode, selfNode, responseTime, option);
 
         FilterHint hint = new FilterHint(Collections.emptyList());
 
@@ -168,10 +168,10 @@ public class LinkFilterTest {
         appB_appA.setApplicationId("APP_A");
         appB_appA.setApplicationServiceType(tomcat.getCode());
 
-        Assert.assertTrue(linkFilter.include(Collections.singletonList(user_appA)));
-        Assert.assertFalse(linkFilter.include(Collections.singletonList(appA_appB)));
-        Assert.assertFalse(linkFilter.include(Collections.singletonList(appB_appA)));
-        Assert.assertTrue(linkFilter.include(Arrays.asList(user_appA, appA_appB, appB_appA)));
+        Assertions.assertTrue(linkFilter.include(List.of(user_appA)));
+        Assertions.assertFalse(linkFilter.include(List.of(appA_appB)));
+        Assertions.assertFalse(linkFilter.include(List.of(appB_appA)));
+        Assertions.assertTrue(linkFilter.include(List.of(user_appA, appA_appB, appB_appA)));
     }
 
     private LinkFilter newLinkFilter(FilterDescriptor descriptor, FilterHint hint) {
@@ -187,12 +187,12 @@ public class LinkFilterTest {
         final String rpcUrl = "http://" + rpcHost + "/some/test/path";
         final String urlPattern = "/some/test/**";
 
-        FilterDescriptor descriptor = new FilterDescriptor();
-        descriptor.setFromApplicationName("APP_A");
-        descriptor.setFromServiceType(tomcat.getName());
-        descriptor.setToApplicationName(rpcHost);
-        descriptor.setToServiceType(unknown.getName());
-        descriptor.setUrlPattern(encodeUrl(urlPattern));
+        FilterDescriptor.FromNode fromNode = new FilterDescriptor.FromNode("APP_A", tomcat.getName(), null);
+        FilterDescriptor.ToNode toNode = new FilterDescriptor.ToNode(rpcHost, unknown.getName(), null);
+        FilterDescriptor.SelfNode selfNode = new FilterDescriptor.SelfNode(null, null, null);
+        FilterDescriptor.Option option = new FilterDescriptor.Option(encodeUrl(urlPattern), null);
+        FilterDescriptor.ResponseTime responseTime = new FilterDescriptor.ResponseTime(null, null);
+        FilterDescriptor descriptor = new FilterDescriptor(fromNode, toNode, selfNode, responseTime, option);
 
         FilterHint hint = new FilterHint(Collections.emptyList());
 
@@ -205,27 +205,28 @@ public class LinkFilterTest {
         spanBo.setParentSpanId(-1);
         spanBo.setApplicationId("APP_A");
         spanBo.setApplicationServiceType(tomcat.getCode());
-        Assert.assertFalse(linkFilter.include(Collections.singletonList(spanBo)));
+        Assertions.assertFalse(linkFilter.include(List.of(spanBo)));
 
         // Accept - has matching rpc span event
-        AnnotationBo rpcAnnotation = new AnnotationBo(RPC_ANNOTATION_CODE, rpcUrl);
+        AnnotationBo rpcAnnotation = AnnotationBo.of(RPC_ANNOTATION_CODE, rpcUrl);
         SpanEventBo rpcSpanEvent = new SpanEventBo();
         rpcSpanEvent.setServiceType(RPC_TYPE_CODE);
         rpcSpanEvent.setDestinationId(rpcHost);
-        rpcSpanEvent.setAnnotationBoList(Collections.singletonList(rpcAnnotation));
+        rpcSpanEvent.setAnnotationBoList(List.of(rpcAnnotation));
         spanBo.addSpanEvent(rpcSpanEvent);
-        Assert.assertTrue(linkFilter.include(Collections.singletonList(spanBo)));
+        Assertions.assertTrue(linkFilter.include(List.of(spanBo)));
     }
 
     @Test
     public void wasToWasFilter_perfectMatch() {
         final ServiceType tomcat = serviceTypeRegistryService.findServiceTypeByName(TOMCAT_TYPE_NAME);
 
-        FilterDescriptor descriptor = new FilterDescriptor();
-        descriptor.setFromApplicationName("APP_A");
-        descriptor.setFromServiceType(tomcat.getName());
-        descriptor.setToApplicationName("APP_B");
-        descriptor.setToServiceType(tomcat.getName());
+        FilterDescriptor.FromNode fromNode = new FilterDescriptor.FromNode("APP_A", tomcat.getName(), null);
+        FilterDescriptor.ToNode toNode = new FilterDescriptor.ToNode("APP_B", tomcat.getName(), null);
+        FilterDescriptor.SelfNode selfNode = new FilterDescriptor.SelfNode(null, null, null);
+        FilterDescriptor.ResponseTime responseTime = new FilterDescriptor.ResponseTime(null, null);
+        FilterDescriptor.Option option = new FilterDescriptor.Option(null, null);
+        FilterDescriptor descriptor = new FilterDescriptor(fromNode, toNode, selfNode, responseTime, option);
 
         FilterHint hint = new FilterHint(Collections.emptyList());
 
@@ -243,18 +244,19 @@ public class LinkFilterTest {
         appA_appB.setParentSpanId(1);
         appA_appB.setApplicationId("APP_B");
         appA_appB.setApplicationServiceType(tomcat.getCode());
-        Assert.assertTrue(linkFilter.include(Arrays.asList(user_appA, appA_appB)));
+        Assertions.assertTrue(linkFilter.include(List.of(user_appA, appA_appB)));
     }
 
     @Test
     public void wasToWasFilter_noMatch() {
         final ServiceType tomcat = serviceTypeRegistryService.findServiceTypeByName(TOMCAT_TYPE_NAME);
 
-        FilterDescriptor descriptor = new FilterDescriptor();
-        descriptor.setFromApplicationName("APP_A");
-        descriptor.setFromServiceType(tomcat.getName());
-        descriptor.setToApplicationName("APP_B");
-        descriptor.setToServiceType(tomcat.getName());
+        FilterDescriptor.FromNode fromNode = new FilterDescriptor.FromNode("APP_A", tomcat.getName(), null);
+        FilterDescriptor.ToNode toNode = new FilterDescriptor.ToNode("APP_B", tomcat.getName(), null);
+        FilterDescriptor.SelfNode selfNode = new FilterDescriptor.SelfNode(null, null, null);
+        FilterDescriptor.ResponseTime responseTime = new FilterDescriptor.ResponseTime(null, null);
+        FilterDescriptor.Option option = new FilterDescriptor.Option(null, null);
+        FilterDescriptor descriptor = new FilterDescriptor(fromNode, toNode, selfNode, responseTime, option);
 
         FilterHint hint = new FilterHint(Collections.emptyList());
 
@@ -272,7 +274,7 @@ public class LinkFilterTest {
         appC_appB.setParentSpanId(1);
         appC_appB.setApplicationId("APP_B");
         appC_appB.setApplicationServiceType(tomcat.getCode());
-        Assert.assertFalse(linkFilter.include(Arrays.asList(user_appC, appC_appB)));
+        Assertions.assertFalse(linkFilter.include(List.of(user_appC, appC_appB)));
 
         // Reject - toNode different
         SpanBo user_appA = new SpanBo();
@@ -285,7 +287,7 @@ public class LinkFilterTest {
         appA_appC.setParentSpanId(1);
         appA_appC.setApplicationId("APP_C");
         appA_appC.setApplicationServiceType(tomcat.getCode());
-        Assert.assertFalse(linkFilter.include(Arrays.asList(user_appA, appA_appC)));
+        Assertions.assertFalse(linkFilter.include(List.of(user_appA, appA_appC)));
     }
 
     @Test
@@ -295,18 +297,20 @@ public class LinkFilterTest {
         final String rpcHost = "some.domain.name";
         final String rpcUrl = "http://" + rpcHost + "/some/test/path";
 
-        FilterDescriptor descriptor = new FilterDescriptor();
-        descriptor.setFromApplicationName("APP_A");
-        descriptor.setFromServiceType(tomcat.getName());
-        descriptor.setToApplicationName("APP_B");
-        descriptor.setToServiceType(tomcat.getName());
+        FilterDescriptor.FromNode fromNode = new FilterDescriptor.FromNode("APP_A", tomcat.getName(), null);
+        FilterDescriptor.ToNode toNode = new FilterDescriptor.ToNode("APP_B", tomcat.getName(), null);
+        FilterDescriptor.SelfNode selfNode = new FilterDescriptor.SelfNode(null, null, null);
+        FilterDescriptor.ResponseTime responseTime = new FilterDescriptor.ResponseTime(null, null);
+        FilterDescriptor.Option option = mock(FilterDescriptor.Option.class);
+        FilterDescriptor descriptor = new FilterDescriptor(fromNode, toNode, selfNode, responseTime, option);
+
 
         FilterHint emptyHint = new FilterHint(Collections.emptyList());
-        FilterHint unmatchingHint = new FilterHint(Collections.singletonList(
-                new RpcHint("APP_B", Collections.singletonList(
+        FilterHint unmatchingHint = new FilterHint(List.of(
+                new RpcHint("APP_B", List.of(
                         new RpcType("different.domain.name", RPC_TYPE_CODE)))));
-        FilterHint matchingHint = new FilterHint(Collections.singletonList(
-                new RpcHint("APP_B", Collections.singletonList(
+        FilterHint matchingHint = new FilterHint(List.of(
+                new RpcHint("APP_B", List.of(
                         new RpcType(rpcHost, RPC_TYPE_CODE)))));
 
         LinkFilter emptyHintLinkFilter = newLinkFilter(descriptor, emptyHint);
@@ -321,30 +325,30 @@ public class LinkFilterTest {
         fromSpan.setParentSpanId(-1);
         fromSpan.setApplicationId("APP_A");
         fromSpan.setApplicationServiceType(tomcat.getCode());
-        AnnotationBo rpcAnnotation = new AnnotationBo(RPC_ANNOTATION_CODE, rpcUrl);
+        AnnotationBo rpcAnnotation = AnnotationBo.of(RPC_ANNOTATION_CODE, rpcUrl);
         SpanEventBo rpcSpanEvent = new SpanEventBo();
         rpcSpanEvent.setServiceType(RPC_TYPE_CODE);
         rpcSpanEvent.setDestinationId(rpcHost);
-        rpcSpanEvent.setAnnotationBoList(Collections.singletonList(rpcAnnotation));
+        rpcSpanEvent.setAnnotationBoList(List.of(rpcAnnotation));
         fromSpan.addSpanEvent(rpcSpanEvent);
         // Reject - filter hint empty
-        Assert.assertFalse(emptyHintLinkFilter.include(Collections.singletonList(fromSpan)));
+        Assertions.assertFalse(emptyHintLinkFilter.include(List.of(fromSpan)));
         // Reject - filter hint does not match
-        Assert.assertFalse(unmatchingHintLinkFilter.include(Collections.singletonList(fromSpan)));
+        Assertions.assertFalse(unmatchingHintLinkFilter.include(List.of(fromSpan)));
         // Accept - filter hint matches
-        Assert.assertTrue(matchingHintLinkFilter.include(Collections.singletonList(fromSpan)));
+        Assertions.assertTrue(matchingHintLinkFilter.include(List.of(fromSpan)));
 
         // Check rpc url as well
         final String unmatchingUrlPattern = "/other/test/**";
         final String matchingUrlPattern = "/some/test/**";
         // Reject - url pattern does not match
-        descriptor.setUrlPattern(unmatchingUrlPattern);
+        when(option.getUrlPattern()).thenReturn(unmatchingUrlPattern);
         LinkFilter matchingHintLinkFilterWithUnmatchingUrlPattern = newLinkFilter(descriptor, matchingHint);
-        Assert.assertFalse(matchingHintLinkFilterWithUnmatchingUrlPattern.include(Collections.singletonList(fromSpan)));
+        Assertions.assertFalse(matchingHintLinkFilterWithUnmatchingUrlPattern.include(List.of(fromSpan)));
         // Accept - url pattern matches
-        descriptor.setUrlPattern(encodeUrl(matchingUrlPattern));
+        when(option.getUrlPattern()).thenReturn(matchingUrlPattern);
         LinkFilter matchingHintLinkFilterWithMatchingUrlPattern = newLinkFilter(descriptor, matchingHint);
-        Assert.assertTrue(matchingHintLinkFilterWithMatchingUrlPattern.include(Collections.singletonList(fromSpan)));
+        Assertions.assertTrue(matchingHintLinkFilterWithMatchingUrlPattern.include(List.of(fromSpan)));
     }
 
     @Test
@@ -355,11 +359,12 @@ public class LinkFilterTest {
         final String destinationA = "BACKEND_A";
         final String destinationB = "BACKEND_B";
 
-        FilterDescriptor descriptor = new FilterDescriptor();
-        descriptor.setFromApplicationName("APP_A");
-        descriptor.setFromServiceType(tomcat.getName());
-        descriptor.setToApplicationName(destinationA);
-        descriptor.setToServiceType(backend.getName());
+        FilterDescriptor.FromNode fromNode = new FilterDescriptor.FromNode("APP_A", tomcat.getName(), null);
+        FilterDescriptor.ToNode toNode = new FilterDescriptor.ToNode(destinationA, backend.getName(), null);
+        FilterDescriptor.SelfNode selfNode = new FilterDescriptor.SelfNode(null, null, null);
+        FilterDescriptor.ResponseTime responseTime = new FilterDescriptor.ResponseTime(null, null);
+        FilterDescriptor.Option option = mock(FilterDescriptor.Option.class);
+        FilterDescriptor descriptor = new FilterDescriptor(fromNode, toNode, selfNode, responseTime, option);
 
         FilterHint hint = new FilterHint(Collections.emptyList());
 
@@ -373,7 +378,7 @@ public class LinkFilterTest {
         spanEventDestinationA.setDestinationId(destinationA);
         spanEventDestinationA.setServiceType(BACKEND_TYPE_CODE);
         matchingSpan.addSpanEvent(spanEventDestinationA);
-        Assert.assertTrue(linkFilter.include(Collections.singletonList(matchingSpan)));
+        Assertions.assertTrue(linkFilter.include(List.of(matchingSpan)));
 
         SpanBo unmatchingSpan = new SpanBo();
         unmatchingSpan.setApplicationId("APP_A");
@@ -382,15 +387,15 @@ public class LinkFilterTest {
         spanEventDestinationB.setDestinationId(destinationB);
         spanEventDestinationB.setServiceType(BACKEND_TYPE_CODE);
         unmatchingSpan.addSpanEvent(spanEventDestinationB);
-        Assert.assertFalse(linkFilter.include(Collections.singletonList(unmatchingSpan)));
+        Assertions.assertFalse(linkFilter.include(List.of(unmatchingSpan)));
 
-        Assert.assertTrue(linkFilter.include(Arrays.asList(matchingSpan, unmatchingSpan)));
+        Assertions.assertTrue(linkFilter.include(List.of(matchingSpan, unmatchingSpan)));
 
         SpanBo bothSpan = new SpanBo();
         bothSpan.setApplicationId("APP_A");
         bothSpan.setApplicationServiceType(tomcat.getCode());
-        bothSpan.addSpanEventBoList(Arrays.asList(spanEventDestinationA, spanEventDestinationB));
-        Assert.assertTrue(linkFilter.include(Collections.singletonList(bothSpan)));
+        bothSpan.addSpanEventBoList(List.of(spanEventDestinationA, spanEventDestinationB));
+        Assertions.assertTrue(linkFilter.include(List.of(bothSpan)));
     }
 
     @Test
@@ -401,11 +406,12 @@ public class LinkFilterTest {
         final String messageQueueA = "QUEUE_A";
         final String messageQueueB = "QUEUE_B";
 
-        FilterDescriptor descriptor = new FilterDescriptor();
-        descriptor.setFromApplicationName("APP_A");
-        descriptor.setFromServiceType(tomcat.getName());
-        descriptor.setToApplicationName(messageQueueA);
-        descriptor.setToServiceType(messageQueue.getName());
+        FilterDescriptor.FromNode fromNode = new FilterDescriptor.FromNode("APP_A", tomcat.getName(), null);
+        FilterDescriptor.ToNode toNode = new FilterDescriptor.ToNode(messageQueueA, messageQueue.getName(), null);
+        FilterDescriptor.SelfNode selfNode = new FilterDescriptor.SelfNode(null, null, null);
+        FilterDescriptor.ResponseTime responseTime = new FilterDescriptor.ResponseTime(null, null);
+        FilterDescriptor.Option option = mock(FilterDescriptor.Option.class);
+        FilterDescriptor descriptor = new FilterDescriptor(fromNode, toNode, selfNode, responseTime, option);
 
         FilterHint hint = new FilterHint(Collections.emptyList());
 
@@ -419,7 +425,7 @@ public class LinkFilterTest {
         spanEventDestinationA.setDestinationId(messageQueueA);
         spanEventDestinationA.setServiceType(MESSAGE_QUEUE_TYPE_CODE);
         matchingSpan.addSpanEvent(spanEventDestinationA);
-        Assert.assertTrue(linkFilter.include(Collections.singletonList(matchingSpan)));
+        Assertions.assertTrue(linkFilter.include(List.of(matchingSpan)));
 
         SpanBo unmatchingSpan = new SpanBo();
         unmatchingSpan.setApplicationId("APP_A");
@@ -428,15 +434,15 @@ public class LinkFilterTest {
         spanEventDestinationB.setDestinationId(messageQueueB);
         spanEventDestinationB.setServiceType(MESSAGE_QUEUE_TYPE_CODE);
         unmatchingSpan.addSpanEvent(spanEventDestinationB);
-        Assert.assertFalse(linkFilter.include(Collections.singletonList(unmatchingSpan)));
+        Assertions.assertFalse(linkFilter.include(List.of(unmatchingSpan)));
 
-        Assert.assertTrue(linkFilter.include(Arrays.asList(matchingSpan, unmatchingSpan)));
+        Assertions.assertTrue(linkFilter.include(List.of(matchingSpan, unmatchingSpan)));
 
         SpanBo bothSpan = new SpanBo();
         bothSpan.setApplicationId("APP_A");
         bothSpan.setApplicationServiceType(tomcat.getCode());
-        bothSpan.addSpanEventBoList(Arrays.asList(spanEventDestinationA, spanEventDestinationB));
-        Assert.assertTrue(linkFilter.include(Collections.singletonList(bothSpan)));
+        bothSpan.addSpanEventBoList(List.of(spanEventDestinationA, spanEventDestinationB));
+        Assertions.assertTrue(linkFilter.include(List.of(bothSpan)));
     }
 
     @Test
@@ -447,11 +453,12 @@ public class LinkFilterTest {
         final String messageQueueA = "QUEUE_A";
         final String messageQueueB = "QUEUE_B";
 
-        FilterDescriptor descriptor = new FilterDescriptor();
-        descriptor.setFromApplicationName(messageQueueA);
-        descriptor.setFromServiceType(messageQueue.getName());
-        descriptor.setToApplicationName("APP_A");
-        descriptor.setToServiceType(tomcat.getName());
+        FilterDescriptor.FromNode fromNode = new FilterDescriptor.FromNode(messageQueueA, messageQueue.getName(), null);
+        FilterDescriptor.ToNode toNode = new FilterDescriptor.ToNode("APP_A", tomcat.getName(), null);
+        FilterDescriptor.SelfNode selfNode = new FilterDescriptor.SelfNode(null, null, null);
+        FilterDescriptor.ResponseTime responseTime = new FilterDescriptor.ResponseTime(null, null);
+        FilterDescriptor.Option option = mock(FilterDescriptor.Option.class);
+        FilterDescriptor descriptor = new FilterDescriptor(fromNode, toNode, selfNode, responseTime, option);
 
         FilterHint hint = new FilterHint(Collections.emptyList());
 
@@ -462,17 +469,18 @@ public class LinkFilterTest {
         matchingSpan.setApplicationId("APP_A");
         matchingSpan.setApplicationServiceType(tomcat.getCode());
         matchingSpan.setAcceptorHost(messageQueueA);
-        Assert.assertTrue(linkFilter.include(Collections.singletonList(matchingSpan)));
+        Assertions.assertTrue(linkFilter.include(List.of(matchingSpan)));
 
         SpanBo unmatchingSpan = new SpanBo();
         unmatchingSpan.setApplicationId("APP_A");
         unmatchingSpan.setApplicationServiceType(tomcat.getCode());
         unmatchingSpan.setAcceptorHost(messageQueueB);
-        Assert.assertFalse(linkFilter.include(Collections.singletonList(unmatchingSpan)));
+        Assertions.assertFalse(linkFilter.include(List.of(unmatchingSpan)));
     }
 
-    private String encodeUrl(String value) {
-        return Base64.encodeBytes(value.getBytes(StandardCharsets.UTF_8));
+    private String encodeUrl(String string) {
+        byte[] encode = Base64.getEncoder().encode(string.getBytes(StandardCharsets.UTF_8));
+        return new String(encode, StandardCharsets.UTF_8);
     }
 
 }
