@@ -30,18 +30,15 @@ import com.navercorp.pinpoint.common.server.bo.serializer.stat.AgentStatSerializ
 import com.navercorp.pinpoint.common.server.bo.stat.AgentStatDataPoint;
 import com.navercorp.pinpoint.common.server.bo.stat.AgentStatType;
 import com.navercorp.pinpoint.web.mapper.TimestampFilter;
-
 import com.sematext.hbase.wd.AbstractRowKeyDistributor;
 import com.sematext.hbase.wd.RowKeyDistributorByHashPrefix;
-import org.apache.commons.lang3.RandomUtils;
 import org.apache.hadoop.hbase.Cell;
 import org.apache.hadoop.hbase.client.Put;
 import org.apache.hadoop.hbase.client.Result;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -87,9 +84,9 @@ public class AgentStatMapperV2Test {
         List<TestAgentStat> givenAgentStats = new ArrayList<>();
         List<Put> puts = new ArrayList<>();
         long initialTimestamp = System.currentTimeMillis();
-        int numBatch = RandomUtils.nextInt(1, MAX_NUM_TEST_VALUES);
+        int numBatch = RANDOM.nextInt(1, MAX_NUM_TEST_VALUES);
         for (int i = 0; i < numBatch; i++) {
-            int batchSize = RandomUtils.nextInt(1, MAX_NUM_TEST_VALUES);
+            int batchSize = RANDOM.nextInt(1, MAX_NUM_TEST_VALUES);
             List<TestAgentStat> agentStatBatch = createAgentStats(initialTimestamp, COLLECT_INVERVAL, batchSize);
             givenAgentStats.addAll(agentStatBatch);
             puts.addAll(this.hbaseOperationFactory.createPuts(AGENT_ID, AGENT_STAT_TYPE, agentStatBatch, this.serializer));
@@ -103,12 +100,12 @@ public class AgentStatMapperV2Test {
         Result result = Result.create(cellsToPut);
 
         // When
-        AgentStatMapperV2<TestAgentStat> mapper = new AgentStatMapperV2<>(this.hbaseOperationFactory, this.decoder, TEST_FILTER);
+        AgentStatMapperV2<TestAgentStat> mapper = new AgentStatMapperV2<>(this.hbaseOperationFactory, this.decoder, TEST_FILTER, HbaseColumnFamily.AGENT_STAT_STATISTICS);
         List<TestAgentStat> mappedAgentStats = mapper.mapRow(result, 0);
 
         // Then
         givenAgentStats.sort(AgentStatMapperV2.REVERSE_TIMESTAMP_COMPARATOR);
-        Assert.assertEquals(givenAgentStats, mappedAgentStats);
+        Assertions.assertEquals(givenAgentStats, mappedAgentStats);
     }
 
     private List<TestAgentStat> createAgentStats(long initialTimestamp, long interval, int batchSize) {
@@ -163,7 +160,7 @@ public class AgentStatMapperV2Test {
 
     private static class TestAgentStatDecoder extends AgentStatDecoder<TestAgentStat> {
         protected TestAgentStatDecoder(AgentStatCodec<TestAgentStat> codec) {
-            super(Arrays.asList(codec));
+            super(List.of(codec));
         }
     }
 
@@ -175,6 +172,7 @@ public class AgentStatMapperV2Test {
 
     private static class TestAgentStat implements AgentStatDataPoint {
 
+        private String applicationName;
         private String agentId;
         private long startTimestamp;
         private long timestamp;
@@ -221,6 +219,16 @@ public class AgentStatMapperV2Test {
         @Override
         public AgentStatType getAgentStatType() {
             return AGENT_STAT_TYPE;
+        }
+
+        @Override
+        public String getApplicationName() {
+            return this.applicationName;
+        }
+
+        @Override
+        public void setApplicationName(String applicationName) {
+            this.applicationName = applicationName;
         }
 
         @Override
